--- a/Python_basics/Programming_Assignment14.ipynb
+++ b/Python_basics/Programming_Assignment14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d7e4c100",
+   "id": "1227cee7",
    "metadata": {},
    "source": [
     "# Programming_Assignment14"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "708f224a",
+   "id": "eed65302",
    "metadata": {},
    "source": [
     "Q.Define a class with a generator which can iterate the numbers, which are divisible by\n",
@@ -19,8 +19,288 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "72037cb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 7 14 21 28 35 42 49 56 63 70 77 84 91 98 "
+     ]
+    }
+   ],
+   "source": [
+    "class Name:\n",
+    "    def divisible(self,n):\n",
+    "        for i in range(0,n+1):\n",
+    "            if i%7==0:\n",
+    "                yield i\n",
+    "\n",
+    "name1 = Name()\n",
+    "for ele in name1.divisible(100):\n",
+    "    print(ele,end=' ')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85a59e70",
+   "metadata": {},
+   "source": [
+    "Q.Write a program to compute the frequency of the words from the input. The output\n",
+    "should output after sorting the key alphanumerically.\n",
+    "\n",
+    "Suppose the following input is supplied to the program:\n",
+    "\n",
+    "New to Python or choosing between Python 2 and Python 3? Read Python 2 or\n",
+    "\n",
+    "Python 3.\n",
+    "\n",
+    "Then, the output should be:\n",
+    "\n",
+    "2:2\n",
+    "\n",
+    "3.:1\n",
+    "\n",
+    "3?:1\n",
+    "\n",
+    "New:1\n",
+    "\n",
+    "Python:5\n",
+    "\n",
+    "Read:1\n",
+    "\n",
+    "and:1\n",
+    "\n",
+    "between:1\n",
+    "\n",
+    "choosing:1\n",
+    "\n",
+    "or:2\n",
+    "\n",
+    "to:1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3a3e629f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentence : New to Python or choosing between Python 2 and Python 3? Read Python 2 or Python 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'2': 2,\n",
+       " '3': 1,\n",
+       " '3?': 1,\n",
+       " 'New': 1,\n",
+       " 'Python': 5,\n",
+       " 'Read': 1,\n",
+       " 'and': 1,\n",
+       " 'between': 1,\n",
+       " 'choosing': 1,\n",
+       " 'or': 2,\n",
+       " 'to': 1}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = input(\"Enter the sentence : \")\n",
+    "\n",
+    "list1 = sentence.split(\" \")\n",
+    "\n",
+    "dict1 = {}\n",
+    "\n",
+    "for i in list1:\n",
+    "    counter = 0\n",
+    "    for j in range(0,len(list1)):\n",
+    "        if i == list1[j]:\n",
+    "            counter+=1\n",
+    "    dict1[i] = counter\n",
+    "\n",
+    "dict1\n",
+    "list2 = list(dict1.items())\n",
+    "list2.sort()\n",
+    "dict1 = dict(list2)\n",
+    "dict1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80d00a28",
+   "metadata": {},
+   "source": [
+    "Q.Define a class Person and its two child classes: Male and Female. All classes have a\n",
+    "method &quot;getGender&quot; which can print &quot;Male&quot; for Male class and &quot;Female&quot; for Female\n",
+    "class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8813ce88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Male\n",
+      "Female\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    class Male:\n",
+    "        def getGender(self):\n",
+    "            print(\"Male\")\n",
+    "    class Female:\n",
+    "        def getGender(self):\n",
+    "            print(\"Female\")\n",
+    "\n",
+    "human1 = Person().Male()\n",
+    "human2 = Person().Female()\n",
+    "human1.getGender()\n",
+    "human2.getGender()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ed7cebe",
+   "metadata": {},
+   "source": [
+    "Q.Please write a program to generate all sentences where subject is in [&quot;I&quot;, &quot;You&quot;] and\n",
+    "verb is in [&quot;Play&quot;, &quot;Love&quot;] and the object is in [&quot;Hockey&quot;,&quot;Football&quot;]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "723c6894",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I Play Hockey\n",
+      "I Play Football\n",
+      "I Love Hockey\n",
+      "I Love Football\n",
+      "You Play Hockey\n",
+      "You Play Football\n",
+      "You Love Hockey\n",
+      "You Love Football\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [\"I\", \"You\"]\n",
+    "b = [\"Play\", \"Love\"]\n",
+    "c = [\"Hockey\",\"Football\"]\n",
+    "\n",
+    "for i in a:\n",
+    "    for j in b:\n",
+    "        for k in c:\n",
+    "            print(f\"{i} {j} {k}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffd1de3d",
+   "metadata": {},
+   "source": [
+    "Q.Please write a program to compress and decompress the string &quot;hello world!hello\n",
+    "world!hello world!hello world!&quot;."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "986ff80a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'x\\x9c\\xcbH\\xcd\\xc9\\xc9W(\\xcf/\\xcaIQ\\xcc \\x82\\r\\x00\\xbd[\\x11\\xf5'\n",
+      "b'hello world!hello world!hello world!hello world!'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import zlib\n",
+    "str = 'hello world!hello world!hello world!hello world!'\n",
+    "\n",
+    "a = bytes(str, 'utf-8')\n",
+    "b = zlib.compress(a)\n",
+    "print(b)\n",
+    "print(zlib.decompress(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32070e4b",
+   "metadata": {},
+   "source": [
+    "Q. Please write a binary search function which searches an item in a sorted list. The\n",
+    "\n",
+    "function should return the index of element to be searched in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "57e8afb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First occurrence of 4 is present at 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bisect import bisect_left\n",
+    "  \n",
+    "def BinarySearch(a, x):\n",
+    "    i = bisect_left(a, x)\n",
+    "    if i != len(a) and a[i] == x:\n",
+    "        return i\n",
+    "    else:\n",
+    "        return -1 \n",
+    "\n",
+    "a = [1, 2, 4, 4, 8]\n",
+    "x = int(4)\n",
+    "res = BinarySearch(a, x)\n",
+    "if res == -1:\n",
+    "    print(x, \"is absent\")\n",
+    "else:\n",
+    "    print(\"First occurrence of\", x, \"is present at\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "88a18089",
+   "id": "3918acbf",
    "metadata": {},
    "outputs": [],
    "source": []
