--- a/Python_basics/Programming_Assignment15.ipynb
+++ b/Python_basics/Programming_Assignment15.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2176bf16",
+   "id": "cfd32b51",
    "metadata": {},
    "source": [
     "# Programming_Assignment15"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bfa6f6c",
+   "id": "b48ba21f",
    "metadata": {},
    "source": [
     "Q.Please write a program using generator to print the numbers which can be divisible by 5 and\n",
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4de1a5bd",
+   "id": "f9107f8c",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09255610",
+   "id": "38ef2fef",
    "metadata": {},
    "source": [
     "Q.Please write a program using generator to print the even numbers between 0 and n in comma\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f3e70927",
+   "id": "18db59ae",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75533cd",
+   "id": "e68a5a42",
    "metadata": {},
    "source": [
     "Q.The Fibonacci Sequence is computed based on the following formula:\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5824112c",
+   "id": "3cd90022",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edd1a1d0",
+   "id": "482478c5",
    "metadata": {},
    "source": [
     "Q.Assuming that we have some email addresses in the &quot;username@companyname.com&quot; format,\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "cfa065cf",
+   "id": "62a8f4a0",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d6d7ed",
+   "id": "6fb39aab",
    "metadata": {},
    "source": [
     "Q.Define a class named Shape and its subclass Square. The Square class has an init function\n",
@@ -203,19 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "498395d7",
+   "execution_count": 43,
+   "id": "18983434",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sjvnj' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_22152/2934420631.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0msquar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSquare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msjvnj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[0mshap\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mShape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sjvnj' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10000\n"
      ]
     }
    ],
@@ -237,21 +234,13 @@
     "        except:\n",
     "            return 0\n",
     "\n",
-    "squar = Square(\"sjvnj\")\n",
+    "squar = Square(100)\n",
     "shap = Shape()\n",
     "\n",
     "print(shap.area())\n",
     "print(squar.area())\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b344121",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
