--- a/Python_basics/Programming_Assignment19.ipynb
+++ b/Python_basics/Programming_Assignment19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ee9807f",
+   "id": "c72631ad",
    "metadata": {},
    "source": [
     "# Programming_Assignment19"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efecb220",
+   "id": "2d5faaad",
    "metadata": {},
    "source": [
     "Question1 Create a function that takes a string and returns a string in which each character is repeated\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5ada9a66",
+   "id": "2f336fc5",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "580c982c",
+   "id": "9947040a",
    "metadata": {},
    "source": [
     "Question2 Create a function that reverses a boolean value and returns the string &quot;boolean expected&quot;\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0e95f568",
+   "id": "30e3ea13",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48080f08",
+   "id": "1e8b8d28",
    "metadata": {},
    "source": [
     "Question3 Create a function that returns the thickness (in meters) of a piece of paper after folding it n\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "58062cc7",
+   "id": "33ae4f3b",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce83a040",
+   "id": "839b5b60",
    "metadata": {},
    "source": [
     "Question4 Create a function that takes a single string as argument and returns an ordered list containing\n",
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "74d5055b",
+   "id": "6b762eb5",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2289a485",
+   "id": "a4dbcafc",
    "metadata": {},
    "source": [
     "Question5 Using list comprehensions, create a function that finds all even numbers from 1 to the given\n",
@@ -217,11 +217,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e900bf57",
+   "execution_count": 36,
+   "id": "54bdab01",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_even_nums(num):\n",
+    "    return [i for i in range(1,num+1) if i%2 == 0]\n",
+    "\n",
+    "find_even_nums(8)"
+   ]
   }
  ],
  "metadata": {
