--- a/Python_basics/Programming_Assignment21.ipynb
+++ b/Python_basics/Programming_Assignment21.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0cf7d4d7",
+   "id": "2dd6b0d8",
    "metadata": {},
    "source": [
     "# Programming_Assignment21"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f538306",
+   "id": "d7e63298",
    "metadata": {},
    "source": [
     "Question1\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ef0a43e0",
+   "id": "b54f8bda",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "774d9c52",
+   "id": "09126a1d",
    "metadata": {},
    "source": [
     "Question2 Create the function that takes a list of dictionaries and returns the sum of people&#39;s budgets.\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "783685bc",
+   "id": "80466075",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40aa405a",
+   "id": "5ccd3fed",
    "metadata": {},
    "source": [
     "Question3\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e04d475c",
+   "id": "79429788",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e42da25e",
+   "id": "e68606c3",
    "metadata": {},
    "source": [
     "Question4 Suppose that you invest $10,000 for 10 years at an interest rate of 6% compounded monthly.\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9d809996",
+   "id": "69b70a4a",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b5b473",
+   "id": "d77e4a07",
    "metadata": {},
    "source": [
     "Question5 Write a function that takes a list of elements and returns only the integers.\n",
@@ -255,17 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3d67b8b7",
+   "execution_count": 18,
+   "id": "60859208",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_18552/2726984505.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Acer\\AppData\\Local\\Temp/ipykernel_18552/2726984505.py\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    b = lambda a: [for in a: if type(i)==int]\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[9, 2, 16]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -277,17 +279,9 @@
     "    return a\n",
     "return_only_integer([9, 2, \"space\", \"car\", \"lion\", 16])\n",
     "\n",
-    "b = lambda a: [for in a: if type(i)==int]\n",
-    "b([9, 2, \"space\", \"car\", \"lion\", 16])\n"
+    "# b = lambda a: [i for i in a if type(i)==int]\n",
+    "# b([10, \"121\", 56, 20, \"car\", 3, \"lion\"])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c754d3d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
