--- a/Python_basics/Programming_Assignment23.ipynb
+++ b/Python_basics/Programming_Assignment23.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6f19c34f",
+   "id": "d5af987e",
    "metadata": {},
    "source": [
     "# Programming_Assignment23"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e4edc37",
+   "id": "24f2e307",
    "metadata": {},
    "source": [
     "Question 1 Create a function that takes a number as an argument and returns True or False depending\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1c656ddf",
+   "id": "24fa4317",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06838f4b",
+   "id": "f0b2f939",
    "metadata": {},
    "source": [
     "Question 2 Given a string of numbers separated by a comma and space, return the product of the\n",
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8f1e7879",
+   "id": "25251116",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56dc8974",
+   "id": "b8c657fe",
    "metadata": {},
    "source": [
     "Question 3 Create a function that squares every digit of a number.\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2564cd5d",
+   "id": "170efdd8",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98acfd7f",
+   "id": "d3483b26",
    "metadata": {},
    "source": [
     "Question 4\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fffc0c85",
+   "id": "d735b081",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d461b52e",
+   "id": "6294a1d6",
    "metadata": {},
    "source": [
     "Question 5\n",
@@ -216,17 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "dc856a63",
+   "execution_count": 28,
+   "id": "2b707f34",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "3"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,17 +234,15 @@
    "source": [
     "def mean(a):\n",
     "    b = str(a)\n",
-    "    c = \n",
-    "    sumuer = sum(c)\n",
-    "    return [int(i) for i in b]\n",
+    "    return round(sum([int(i) for i in b])/len(b))\n",
     "\n",
-    "mean(42)"
+    "mean(12345)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea1f657e",
+   "id": "9b018bdb",
    "metadata": {},
    "outputs": [],
    "source": []
