--- a/Python_basics/Programming_Assignment11.ipynb
+++ b/Python_basics/Programming_Assignment11.ipynb
@@ -228,10 +228,7 @@
     "if mainswitch == \"True\":\n",
     "    print (\"Match\")\n",
     "else :\n",
-    "    print (\"Not a match\")      \n",
-    "\n",
-    "\n",
-    "\n"
+    "    print (\"Not a match\")      \n"
    ]
   },
   {
